--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -20,6 +20,7 @@ alexapy==1.29.10
 async-upnp-client==0.45.0
 audible==0.10.0
 auntie-sounds==1.1.4
+awesomeversion>=24.6.0
 bidict==0.23.1
 certifi==2025.11.12
 chardet>=5.2.0
