--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -9,9 +9,9 @@ aiohttp_asyncmdnsresolver==0.1.1
 aiohttp-fast-zlib==0.3.0
 aiojellyfin==0.14.1
 aiomusiccast==0.15.0
-aioresonate==0.13.1
 aiortc>=1.6.0
 aiorun==2025.1.1
+aiosendspin==1.0.0
 aioslimproto==3.1.1
 aiosonos==0.1.9
 aiosqlite==0.21.0
