--- a/music_assistant/providers/sendspin/manifest.json
+++ b/music_assistant/providers/sendspin/manifest.json
@@ -4,7 +4,9 @@
   "stage": "alpha",
   "name": "Sendspin",
   "description": "Sendspin is an audio playback, control and synchronization protocol developed by the Open Home Foundation and is the native playback protocol built into Music Assistant, used for playback to supported clients like the Music Assistant Web interface, supported (mobile) clients and supported hardware",
+  "documentation": "https://music-assistant.io/player-support/sendspin/",
   "codeowners": ["@music-assistant"],
   "requirements": ["aiosendspin==1.0.0"],
-  "builtin": true
+  "builtin": true,
+  "allow_disable": false
 }
