--- a/music_assistant/providers/airplay_receiver/manifest.json
+++ b/music_assistant/providers/airplay_receiver/manifest.json
@@ -5,6 +5,9 @@
   "name": "AirPlay Receiver",
   "description": "Receive AirPlay audio streams and use them as a source in Music Assistant.",
   "codeowners": ["@music-assistant"],
+  "credits": [
+    "[ShairPort Sync by Mike Brady](https://github.com/mikebrady/shairport-sync)"
+  ],
   "documentation": "https://music-assistant.io/plugins/airplay-receiver/",
   "multi_instance": true,
   "requirements": []
