--- a/music_assistant/providers/alexa/manifest.json
+++ b/music_assistant/providers/alexa/manifest.json
@@ -5,6 +5,7 @@
   "name": "Alexa",
   "description": "Stream to Amazon Alexa (Echo) devices.",
   "codeowners": ["@alams154"],
+  "credits": ["[alexapy](https://gitlab.com/keatontaylor/alexapy)"],
   "requirements": ["alexapy==1.29.10"],
   "documentation": "https://www.music-assistant.io/player-support/alexa/"
 }
