--- a/music_assistant/providers/audible/manifest.json
+++ b/music_assistant/providers/audible/manifest.json
@@ -5,6 +5,7 @@
   "name": "Audible",
   "description": "Access Audible’s extensive audiobook library and podcast catalogue — perfect for spoken-word listening.",
   "codeowners": ["@ztripez"],
+  "credits": ["[Audible library](https://github.com/mkb79/Audible)"],
   "requirements": ["audible==0.10.0"],
   "documentation": "https://www.music-assistant.io/music-providers/audible"
 }
