--- a/music_assistant/providers/bluesound/manifest.json
+++ b/music_assistant/providers/bluesound/manifest.json
@@ -5,6 +5,7 @@
   "name": "Bluesound",
   "description": "Send high-resolution audio to Bluesound speakers and multiroom systems.",
   "codeowners": ["@cyanogenbot"],
+  "credits": ["[pyblu](https://github.com/LouisChrist/pyblu)"],
   "requirements": ["pyblu==2.0.5"],
   "documentation": "https://music-assistant.io/player-support/bluesound/",
   "mdns_discovery": ["_musc._tcp.local.","_musp._tcp.local."]
