--- a/music_assistant/providers/fanarttv/manifest.json
+++ b/music_assistant/providers/fanarttv/manifest.json
@@ -5,6 +5,7 @@
   "name": "fanart.tv",
   "description": "Provides high-quality artist and album artwork from Fanart.tv, used throughout the Music Assistant UI.",
   "codeowners": ["@music-assistant"],
+  "credits": ["[Fanart.tv](https://fanart.tv)"],
   "requirements": [],
   "documentation": "",
   "multi_instance": false,
