--- a/music_assistant/providers/fully_kiosk/manifest.json
+++ b/music_assistant/providers/fully_kiosk/manifest.json
@@ -5,6 +5,9 @@
   "name": "Fully Kiosk Browser",
   "description": "Play audio on Fully Kiosk-enabled displays or Android devices.",
   "codeowners": ["@music-assistant"],
+  "credits": [
+    "[Fully Kiosk library for Python](https://github.com/cgarwood/python-fullykiosk)"
+  ],
   "requirements": ["python-fullykiosk==0.0.14"],
   "documentation": "https://music-assistant.io/player-support/fully-kiosk/",
   "multi_instance": true,
