--- a/music_assistant/providers/genius_lyrics/manifest.json
+++ b/music_assistant/providers/genius_lyrics/manifest.json
@@ -5,6 +5,7 @@
   "name": "Genius Lyrics",
   "description": "Alternative lyrics source, pulling song lyrics from Genius to supplement other providers.",
   "codeowners": ["@robert-alfaro"],
+  "credits": ["[LyricsGenius](https://github.com/johnwmillr/LyricsGenius)"],
   "requirements": ["lyricsgenius==3.7.2"],
   "documentation": "https://www.music-assistant.io/metadata/",
   "multi_instance": false,
