--- a/music_assistant/providers/ibroadcast/manifest.json
+++ b/music_assistant/providers/ibroadcast/manifest.json
@@ -5,6 +5,7 @@
   "name": "iBroadcast",
   "description": "Stream your personal iBroadcast music collection from anywhere.",
   "codeowners": ["@robsonke"],
+  "credits": ["[ibroadcastaio](https://github.com/robsonke/ibroadcastaio)"],
   "requirements": ["ibroadcastaio==0.4.0"],
   "documentation": "https://music-assistant.io/music-providers/ibroadcast/",
   "multi_instance": true
