--- a/music_assistant/providers/jellyfin/manifest.json
+++ b/music_assistant/providers/jellyfin/manifest.json
@@ -5,6 +5,7 @@
   "name": "Jellyfin Media Server Library",
   "description": "Stream music from your self-hosted Jellyfin server.",
   "codeowners": ["@lokiberra", "@Jc2k"],
+  "credits": ["[aiojellyfin](https://github.com/Jc2k/aiojellyfin)"],
   "requirements": ["aiojellyfin==0.14.1"],
   "documentation": "https://music-assistant.io/music-providers/jellyfin/",
   "multi_instance": true
