--- a/music_assistant/providers/lastfm_scrobble/manifest.json
+++ b/music_assistant/providers/lastfm_scrobble/manifest.json
@@ -5,6 +5,7 @@
   "name": "LastFM Scrobbler",
   "description": "Scrobbles your listening history to Last.fm (and others with a compatible API like Libre.fm), building rich listening stats and recommendations.",
   "codeowners": ["@music-assistant"],
+  "credits": ["[pylast](https://github.com/pylast/pylast)"],
   "documentation": "https://music-assistant.io/plugins/lastfm_scrobble/",
   "multi_instance": false,
   "builtin": false,
