--- a/music_assistant/providers/listenbrainz_scrobble/manifest.json
+++ b/music_assistant/providers/listenbrainz_scrobble/manifest.json
@@ -5,6 +5,7 @@
   "name": "ListenBrainz Scrobbler",
   "description": "Scrobbles your listening history to ListenBrainz — an open, community-driven alternative to Last.fm.",
   "codeowners": ["@music-assistant"],
+  "credits": ["[liblistenbrainz](https://github.com/paramsingh/liblistenbrainz)"],
   "documentation": "https://music-assistant.io/plugins/listenbrainz_scrobble/",
   "multi_instance": false,
   "builtin": false,
