--- a/music_assistant/providers/musiccast/manifest.json
+++ b/music_assistant/providers/musiccast/manifest.json
@@ -6,6 +6,7 @@
   "description": "Stream audio to Yamaha MusicCast speakers — supports multiroom playback.",
   "requirements": ["aiomusiccast==0.15.0"],
   "codeowners": ["@fmunkes"],
+  "credits": ["[aiomusiccast](https://github.com/vigonotion/aiomusiccast)"],
   "mdns_discovery": ["_http._tcp.local."],
   "documentation": "https://music-assistant.io/player-support/musiccast",
   "multi_instance": false
