--- a/music_assistant/providers/plex/manifest.json
+++ b/music_assistant/providers/plex/manifest.json
@@ -5,6 +5,7 @@
   "name": "Plex Media Server Library",
   "description": "Stream your personal music, podcasts, and radio via your Plex media server.",
   "codeowners": ["@micha91", "@anatosun"],
+  "credits": ["[python-plexapi](https://github.com/pkkid/python-plexapi)"],
   "requirements": ["plexapi==4.17.2"],
   "documentation": "https://music-assistant.io/music-providers/plex/",
   "multi_instance": true
