--- a/music_assistant/providers/plex_connect/manifest.json
+++ b/music_assistant/providers/plex_connect/manifest.json
@@ -5,6 +5,7 @@
   "name": "Plex Connect Plugin",
   "description": "Makes a Music Assistant player appear as a device in the official Plex apps.",
   "codeowners": ["@anatosun"],
+  "credits": ["[python-plexapi](https://github.com/pkkid/python-plexapi)"],
   "requirements": ["plexapi==4.17.2"],
   "icon": "mdi:plex",
   "documentation": "https://music-assistant.io/plugins/plex-connect/",
