--- a/music_assistant/providers/roku_media_assistant/manifest.json
+++ b/music_assistant/providers/roku_media_assistant/manifest.json
@@ -4,6 +4,7 @@
   "name": "Media Assistant (Roku)",
   "description": "Support for Roku's running Media Assistant.",
   "codeowners": ["@medievalapple"],
+  "credits": ["[python-rokuecp](https://github.com/ctalkington/python-rokuecp)"],
   "requirements": ["async-upnp-client==0.46.0","rokuecp==0.19.5"],
   "documentation": "https://music-assistant.io/player-support/roku-media-assistant/",
   "stage": "beta"
