--- a/music_assistant/providers/siriusxm/manifest.json
+++ b/music_assistant/providers/siriusxm/manifest.json
@@ -5,6 +5,7 @@
   "name": "SiriusXM",
   "description": "Stream SiriusXM’s radio, talk, and curated music channels.",
   "codeowners": ["@btoconnor"],
+  "credits": ["[sxm-client](https://github.com/AngellusMortis/sxm-client)"],
   "requirements": ["sxm==0.2.8"],
   "documentation": "https://music-assistant.io/music-providers/siriusxm/",
   "multi_instance": false
