--- a/music_assistant/providers/soundcloud/manifest.json
+++ b/music_assistant/providers/soundcloud/manifest.json
@@ -5,6 +5,7 @@
   "name": "Soundcloud",
   "description": "Stream tracks, remixes, and user-uploaded music from the SoundCloud community.",
   "codeowners": ["@domanchi", "@gieljnssns"],
+  "credits": ["[soundcloudpy](https://github.com/Enubia/soundcloud-py)"],
   "requirements": ["soundcloudpy==0.1.4"],
   "documentation": "https://music-assistant.io/music-providers/soundcloud/",
   "multi_instance": true
