--- a/music_assistant/providers/spotify/manifest.json
+++ b/music_assistant/providers/spotify/manifest.json
@@ -5,6 +5,7 @@
   "name": "Spotify",
   "description": "Stream music, playlists, podcasts, and discover new songs via Spotify’s ecosystem.",
   "codeowners": ["@music-assistant"],
+  "credits": ["[librespot](https://github.com/librespot-org/librespot)"],
   "requirements": ["pkce==1.0.3"],
   "documentation": "https://music-assistant.io/music-providers/spotify/",
   "multi_instance": true
