--- a/music_assistant/providers/ytmusic/manifest.json
+++ b/music_assistant/providers/ytmusic/manifest.json
@@ -5,6 +5,7 @@
   "name": "YouTube Music",
   "description": "Stream songs and podcasts from YouTube Music.",
   "codeowners": ["@MarvinSchenkel"],
+  "credits": ["[ytmusicapi](https://github.com/sigma67/ytmusicapi)"],
   "requirements": [
     "ytmusicapi==1.11.3",
     "duration-parser==1.0.1",
