--- a/music_assistant/providers/hass/manifest.json
+++ b/music_assistant/providers/hass/manifest.json
@@ -5,6 +5,7 @@
   "name": "Home Assistant",
   "description": "Connects Music Assistant with Home Assistant for automation, integration, and enhanced smart-home control.",
   "codeowners": ["@music-assistant"],
+  "credits": ["[hass-client](https://github.com/music-assistant/python-hass-client)"],
   "documentation": "",
   "multi_instance": false,
   "builtin": false,
