--- a/music_assistant/providers/opensubsonic/manifest.json
+++ b/music_assistant/providers/opensubsonic/manifest.json
@@ -5,6 +5,7 @@
   "name": "OpenSubsonic Media Server Library",
   "description": "Stream music from your OpenSubsonic compatible server — your own cloud jukebox.",
   "codeowners": ["@khers"],
+  "credits": ["[py-opensonic](https://github.com/khers/py-opensonic)"],
   "requirements": ["py-opensonic==7.0.2"],
   "documentation": "https://music-assistant.io/music-providers/subsonic/",
   "multi_instance": true
