--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -51,6 +51,7 @@ podcastparser==0.6.11
 propcache>=0.2.1
 py-opensonic==7.0.2
 pyblu==2.0.5
+pycares==4.11.0
 PyChromecast==14.0.9
 pycryptodome==3.23.0
 pylast==6.0.0
