BBC Sounds: Bump auntie-sounds to 1.1.7 (#2797)
* Update auntie-sounds requirement to version 1.1.6

* Update auntie-sounds version to 1.1.6

* Bump auntie-sounds to 1.1.7

--- a/music_assistant/providers/bbc_sounds/manifest.json
+++ b/music_assistant/providers/bbc_sounds/manifest.json
@@ -7,9 +7,11 @@
   "codeowners": [
     "@kieranhogg"
   ],
-  "credits": ["[auntie-sounds](https://github.com/kieranhogg/auntie-sounds)"],
+  "credits": [
+    "[auntie-sounds](https://github.com/kieranhogg/auntie-sounds)"
+  ],
   "requirements": [
-    "auntie-sounds==1.1.4",
+    "auntie-sounds==1.1.7",
     "pytz==2025.2"
   ],
   "multi_instance": false
